--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="app">
   </div>
 </body>
 <script src="main.js"></script>
